...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/race_item_flag"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="4dp"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"
...
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/race_item_flag">

        <TextView
            android:id="@+id/race_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/race_item_info"
...
